# minesweeper

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
game/src/core/: board.py  events.py
game/src/mechanics/: __init__.py  board.py  mines.py
game/tests/unit/: test_board.py  test_mines.py
